# cloud_storage

./: .gitignore  README.md  docker-compose.yml  keys.json  requirements.txt  setup_db.bat  test.txt
backend/: main.py  pyproject.toml  schemas.py
backend/routes/: backup.py  download.py  link.py  login.py  settings.py  storage.py  upload.py  user.py
backend/services/: auth_service.py  backup_service.py  file_service.py  link_service.py  settings_service.py  storage_service.py
database/: db.py  schema.sql
docs/: Webの画面.docx  api_design.md  db_design.md  security_design.md
frontend/: files.html  login.html  register.html  reset.html  script.js  settings.html  share.html  share.js  style.css
security/: logger.py  password.py  permission.py
