[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "itosi", email = "itosi@example.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pyotp>=2.9.0",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
