[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "itosi", email = "itosi@example.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "psycopg2-binary>=2.9.12",
    "pyotp>=2.9.0",
    "uvicorn>=0.48.0",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
